index.css
body {
    display: flex;
    justify-content: center;
    margin: auto;
}

#container {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: scroll;
    background: #1B1924;
    width: 390px;
    height: 844px;
}

img {
    margin-top: 51px;
    width: 90px;
    height: 90px;
}

h1 {
    color: #FFF;
    font-family: Josefin Sans;
    font-size: 25px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}


#msg-area {
    box-sizing: border-box;
    padding: 12px 16px;
    width: 317px;
    height: 118px;
    border-radius: 8px;
    color: #8F8F8F;
    background: #444059;
    border: none;
    font-family: Inter;
    font-size: 15px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    resize: none;
}

#publish-btn {
    cursor: pointer;
    margin-top: 13px;
    width: 317px;
    height: 61px;
    border-radius: 8px;
    border: none;
    background: #28A9F1;
    color: #04131C;
    text-align: center;
    font-family: Josefin Sans;
    font-size: 22px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

h2 {
    margin-top: 28px;
    color: #FFF;
    font-family: Josefin Sans;
    font-size: 20px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

ul{
    list-style-type: none;
    color: #fff;
    margin-right: 40px;
    font-family: Inter;
    font-weight: 400;
}

li {
    overflow: scroll;
    padding: 15px 15px 5px 15px;
    margin-bottom: 13px;
    width: 317px;
    height: 72px;
    background: #FFF;
    color: #1B1924;
    font-family: Inter;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

